[package]
name = "mymha"
version = "0.1.0"
authors = ["xiao cai niao"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt="0.3.2"
actix-web = { version = "1.0", features = ["ssl"] }
openssl = { version="0.10.25" }
actix-files = "0.1.6"
actix-service = "0.4.2"
actix-session = "0.2"
actix-rt = "0.2.5"
futures = "0.1"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.40"
env_logger = "0.7.1"
rocksdb = "0.15"
threadpool = "1.7"
uuid = { version = "0.8", features = ["serde", "v4"] }
bigdecimal = "0.1"
base64 = "0.10.1"
hex = "0.4.0"
mysql_common = "0.18"
byteorder="1"
sha1="0.6.0"
sha2="0.8.0"
log = "0.4"
log4rs = "0.8.3"
rand = "0.7"
